feat: implement mDOC template processing and data provider integration
- Add DataProviderPlugin integration for raw business data fetching
- Implement Velocity template engine processing for mDOC structure
- Add sequential digestID assignment (0, 1, 2...) for credential elements
- Organize data into proper ISO 18013-5 namespaces
- Support custom namespace templates (e.g., org.mosip.farmer)
- Generate unsigned mDOC JSON structure with validityInfo and docType
- Maintain existing interface compatibility with no breaking changes
- Add support for system metadata (_docType, _issuer) template variables

Next: COSE signing process and CBOR encoding (Steps 3-4)

	new file:   certify-core/src/main/java/io/mosip/certify/core/constants/MDocConstants.java
	new file:   certify-service/src/main/java/io/mosip/certify/credential/MDocCredential.java
	modified:   certify-service/src/main/java/io/mosip/certify/services/CertifyIssuanceServiceImpl.java
	modified:   certify-service/src/main/java/io/mosip/certify/utils/CredentialUtils.java
	new file:   certify-service/src/main/java/io/mosip/certify/utils/MDocUtils.java
	new file:   certify-service/src/main/java/io/mosip/certify/vcformatters/MDocVCFormatter.java
	new file:   certify-service/src/main/java/io/mosip/certify/vcformatters/VCFormatterFactory.java
	modified:   certify-service/src/main/java/io/mosip/certify/vcformatters/VelocityTemplatingEngineImpl.java

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>